--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -719,32 +719,32 @@
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a
-                                onclick="selectText('Bukovel-Yaremche-Solotvino')" class="text-white"
-                                title="Mорское путешествие" href="#BukovelYaremcheSolotvino" rel="tag">Буковель, Яремче, Солотвино
+                                onclick="selectText('BukovelYaremcheSolotvino')" class="text-white"
+                                title="Буковель, Яремче, Солотвино" href="#BukovelYaremcheSolotvino" rel="tag">Буковель, Яремче, Солотвино
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('tourism')"
                                 class="text-white" title="Туризм" href="#tourism" rel="tag">Туризм
 			</a></span>
 			
-                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('DzharylgachUkrainianMaldives')"
-                                class="text-white" title="Джарылгач - Украинские Мальдивы" href="#DzharylgachUkrainianMaldives" rel="tag">Западная Украина из Запорожья
+                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('WesternUkraineFromZaporozhye')"
+                                class="text-white" title="Западная Украина из Запорожья" href="#WesternUkraineFromZaporozhye" rel="tag">Западная Украина из Запорожья
 			</a></span>	
 			
-               <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('OleshkovskyDesert')"
-                                class="text-white" title="Олешковская пустыня" href="#OleshkovskyDesert" rel="tag">Горное озеро
+               <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('MountainLake')"
+                                class="text-white" title="Горное озеро" href="#MountainLake" rel="tag">Горное озеро
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('goldenDunes')"
-                                class="text-white" title="Золотистые барханы" href="#goldenDunes" rel="tag">Отдых в горах
+                                class="text-white" title="Отдых в горах" href="#goldenDunes" rel="tag">Отдых в горах
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('beautifulBeaches')"
-                                class="text-white" title="Красивейшие пляжи" href="#beautifulBeaches" rel="tag">Пейзажи Карпатских гор
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('HolidaysInTheMountains')"
+                                class="text-white" title="Красивейшие пляжи" href="#HolidaysInTheMountains" rel="tag">Пейзажи Карпатских гор
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('mysteriousLighthouses')"
-                                class="text-white" title="Загадочные маяки" href="#mysteriousLighthouses" rel="tag">Дыхание вечнозеленого леса
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('BreathOfTheEvergreenForest')"
+                                class="text-white" title="Дыхание вечнозеленого леса" href="#BreathOfTheEvergreenForest" rel="tag">Дыхание вечнозеленого леса
 			</a></span>
 
                     </div>
