--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -239,61 +239,32 @@
                                     <div class="card-body txt-alg-jf">
 					    
 					<h5>24 июля</h5>
-                                        <p><strong>06:30 </strong>
-						Выезд из Центра <span id="Zaporozhye">Запорожья</span> после минутки позитива.
-					   Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур.класса (раскладные сидения), TV 
-					 <img src="images/Emoji/tv.png" alt="" height="20px">
-					Заберем Вас Металлургов-Фестивальная-Авто и жд вокзалы 
-					<i>(уточняйте при бронировании, можем подобрать по пути в Васильевке 
-						или из сел по дороге в сторону Скадовска). </i>
-	
+                                        <p><strong>09:20 </strong>
+						выезд с центра Запорожья после минутки позитива. <img src="/images/Emoji/1f607.png" alt="" height="20px">
+  						Фестивальная - Металлургов - Каховская заберем Вас в этих местах и в путь!
                                         </p>
-                                        <p><strong>12:30-50 </strong>
-                                            Мы в настоящей Сахаре.
-						<span id="goldenDunes">Золотистые барханы</span>, потрясающий песок. 
-					    Делаем супер крутые фото в Олешковских песках и едем дальше на остров. 
+                                        <p><strong>10:00-13:00 </strong>
+                                            Аквазоо рай для любителей милых маленьких зверушек, 
+					    сельских жителей ферм и просто красивое место. 
+					    Слушаем истории жителей зоопарка, знакомимся,
+					    кормим всех кого можно кормить, гладим и делаем крутые фоточки. 
+					    По-желанию обедаем вкуснейшим обедом и купаемся в бассейне 
+						<i>(дополнительная оплата 60/40 грн.)</i>	 
                                         </p>
-					<p><strong>14:00  </strong>
-                                            Путешествие на катере к настоящему острову среди Черного моря. 
-					    Украинские Мальдивы-остров Джарылгач. Потрясающее место
-					    с восхитительными пляжами. Белый песок и бирюзовая вода, 
-					    там хочется остаться навсегда. Обедаем вкуснейшей ухой со ската 
-						<i>(доп.расход - 100 грн. - 450 г. порция)</i> или борщ - <i>(доп.расход - 60 грн.)</i>.
-					    Купаемся и загораем, получаем полный кайфффф от отдыха. 
-					    Делаем потрясающие фото и видео.
-					    Ужинаем там-же <i>(доп.расход: гречка с мясом - 70 грн., макароны с котлеткой – 60 грн.)</i>
-					    Кайфуем весь оставшийся день и ночь. 
-                                        </p>   
- 
- 					<hr>
-                                        <h5>25 июля</h5>
-                                        <p><strong>08:00-8:30 </strong>
-                                           Вкусненько завтракаем <i>(доп.расход: плов - 80 грн., жаркое - 80 грн.)</i>, собираемся в <span id="cruise">морское путешествие</span> по маякам!
-						<img src="/images/Emoji/1f642.png" alt="" height="20px">
-                                        </p>    
-                                        <p><strong>09:00 - 12:00 </strong>
-                                            Сокровища островов и потрясающие маяки!
-					    Морская экскурсия с купанием. Мы узнаем историю Украинских
-						Мальдив и его <span id="mysteriousLighthouses">загадочных маяков</span>. Любовь, страсти, 
-					    удивительные приключения и романтические истории все это 
-					    нам расскажет потрясающий местный экскурсовод. Море эмоциий и впечатлений. 
-                                        </p>
-					<p><strong>12:00 - 13:00 </strong>
-                                            Время пообедать <i>(доп.расход: )</i> и собраться в дорогу. 
-					    Обедаем вкуснейшей ухой со ската <i>(доп.расход - 100 грн. - 450 г. порция)</i>
-					    или борщ - <i>(доп.расход 60 грн.)</i>. Выселяемся и отправляемся на катере в Скадовск. 
-					    Время возвращаться домой.
-                                        </p>
-					<p><strong>20:00 - 21:00 </strong>
-                                            Мы уже в Запорожье! В ПОЛНОМ ВОСТОРГЕ ОТ ЭКСКУРСИИ! 
-					    С ПРЕКРАСНЫМ НАСТРОЕНИЕМ ОТДЫХАЕМ И ВЫКЛАДЫВАЕМ ФОТО .
-					    Не забывайте отмечать наши странички, +10000 в карму и искренняя наша благодарочка.  
+					<p><strong>14:40-16:40  </strong>
+                                            Крутяк! Мы на Бали, шикарные домики на воде. 
+					    Вокруг белые и зеленые павлины. Полнейший восторг. 
+					    Неспешно гуляем по Яхт Клубу.
+ 					    Делаем фоточки и видосы на память. 
+					    По желанию организовываем групповую прогулку на яхте 1 час.
+                                        </p> 
+					<p><strong>18:40 </strong>
+                                            Мы уже в Запорожье, довольные возвращаемся домой чтобы 
+					    поделиться впечатлениями с друзьями и близкими <i>(но еще лучше их взять с собой).</i> 
+					    Выкладываем сториз и посты в Инсту, ФБ и Тик Ток, 
+					    обязательно отмечаем @dovgalyv.zp , Довгаль Юлия , @novipovorot ,
+					    всем кто отметит +10000 к карму и наша благодарочка ;*
 						<img src="/images/Emoji/1f607.png" alt="" height="20px">
-                                        </p>
-                                        <hr>
-                                        <p>
-                                            <i> *время указано предварительно и может быть незначительно изменено без
-                                                ущерба качеству экскурсии.</i>
                                         </p>
                                     </div>
                                 </div>
