--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -299,21 +299,18 @@
 						Tik Tok, 
 						<!-- Facebook -->
 						<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fparse.com" target="_blank" rel="noopener">
-							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
-							xmlns:xlink="http://www.w3.org/1999/xlink" 
-							x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" 
-							enable-background="new 0 0 48 48" xml:space="preserve">  
-								<image id="image0" width="48" height="48" x="0" y="0"
-								    xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAMAAABg3Am1AAAABGdBTUEAALGPC/xhBQAAACBjSFJN
-								AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAZlBMVEUAAABBUbU+UbU/UrU/
-								UbY/T7ZAUbY/UbRAUbU/UbU/UbQ/UbU/UbU/UbVBUrQ+UrU/UbVCVLaMl9PQ1O3x8vn+/v////9B
-								U7bHzOmNl9PR1e3y8/qCjs9EVrf9/v7w8fmzuuKVn9bh5M9EAAAAEHRSTlMAT8D0v02IhUy+8/Lx
-								vUuDYevhpQAAAAFiS0dEFnzRqBkAAAAHdElNRQflBwsJCybRVBw5AAAAmUlEQVRIx+3Uyw6CMBCF
-								4ZGLQBUcb4PiBX3/lzTEhU4TOJ0FiTH91+cjtIsSxQwtkpRHS7Pc3y8ZVHjfR3vmUoEEg0oBh8FK
-								AbxnngFsd/vDUURCQXuSd6HgLEbQWcFlGF9v4Ye+D6A13NL378wA5FNvBZ0VPKzg+SO3FMGfAofB
-								WoGMYbUCOQaNAlSg/Ya8ymriyXd1QzFDLxMwU5O+n1vAAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDIx
-								LTA3LTExVDA5OjExOjM4KzAzOjAwfkiL1wAAACV0RVh0ZGF0ZTptb2RpZnkAMjAyMS0wNy0xMVQw
-								OToxMTozOCswMzowMA8VM2sAAAAASUVORK5CYII=" />
+							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25" height="25"
+							     viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve">  <image id="image0" width="36" height="36" x="0" y="0"
+							    xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAMAAADW3miqAAAABGdBTUEAALGPC/xhBQAAACBjSFJN
+							AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAYFBMVEX////EyehufMdHWbg/
+							UbVvfcjFyumZotibpNjGy+lwfchIWbhJWrlCVLaMl9PQ1O3x8vn+/v9BU7bHzOmNl9PR1e3y8/qC
+							js9EVrf9/v7w8fmzuuKVn9ZKW7lxfsicptlmfW7dAAAAAWJLR0QAiAUdSAAAAAlwSFlzAAAOxAAA
+							DsQBlSsOGwAAAAd0SU1FB+UHCwkWFObvIaUAAACKSURBVDjL7dTNDoJADATgEQoCC/6AKCDC+7+l
+							3XDACztNiJ6c85d257AFcIhi2UycpNAchSTTOcyI5Ig4KuA4KsGNyA5Unc6XqzYPobrBkhC6wYBa
+							C7p78OjCD+89qkm7z1U7ENYMFtRa0NOCxh+0+6MvI8fRC4nQTEg50q+aMTP75XkROD9u0jlv6VET
+							mQVQ7J4AAAAldEVYdGRhdGU6Y3JlYXRlADIwMjEtMDctMTFUMDk6MjI6MjArMDM6MDDz2BgsAAAA
+							JXRFWHRkYXRlOm1vZGlmeQAyMDIxLTA3LTExVDA5OjIyOjIwKzAzOjAwgoWgkAAAAABJRU5ErkJg
+							gg==" />
 							</svg>
 						</a>
 						<!-- //Facebook -->
