--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -298,7 +298,7 @@
 						<!-- //TiKTok -->
 						Tik Tok, 
 						<!-- Facebook -->
-						<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fparse.com" target="_blank" rel="noopener">
+						<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" rel="noopener">
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25" height="25"
 							     viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve">  <image id="image0" width="36" height="36" x="0" y="0"
 							    xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAMAAADW3miqAAAABGdBTUEAALGPC/xhBQAAACBjSFJN
@@ -314,7 +314,7 @@
 							</svg>
 						</a>
 						<!-- //Facebook -->
-						<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fparse.com" target="_blank" rel="noopener">
+						<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" rel="noopener">
 						   Facebook
 						</a>, 
 					    обязательно отмечаем @dovgalyv.zp , Довгаль Юлия , @novipovorot ,
