--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -281,6 +281,7 @@
                                                 </svg>
 						<!-- //instagram -->
 						Instagram,  
+						<a href="https://msng.link/o/?https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html=tt">Message me on TikTok</a>
 						<!-- TiKTok -->
 						<svg height="25" viewBox="0 0 250 250" width="25" xmlns="http://www.w3.org/2000/svg">
                                                        <g clip-rule="evenodd" fill-rule="evenodd">
