--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -418,26 +418,16 @@
                                   <i>(от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь)</i>
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    транспорт тур.класса с раскладными сиденьями, ТВ; 
+                                    входной билет и экскурсия в Центре Аквазоо; 
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   Забираем Металлургов - Фестивальная - Советская - Авто и Ж/Д вокзалы. 
-				   Заберем Вас в Васильевке и по трассе с любого села по дороге на море! 
+                                   сопровождение представителя нашей компании;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    1 НОЧЬ НА Острове Джарылгач 1 линия от моря, 
-				    живем на пляже домики 3-4м, альтанки 2м
-			            (палатка в полный рос с поролоновым матрасом) удобства на территории: bio-туалет, душ, умывальник;  
+                                    магнит от Нового поворота;  
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   Морская экскурсия на мяки с купанием. Мега крутые эмоции;
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-				   Посещение заповедника Олешковские пески с возможностью сделать фото «Я в Сахаре»;
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    Супер позитивное сопровождение представителя нашей компании,
-				    сувенир-магнит от Нового Поворота, СУПЕР КРУТОЙ ОТДЫХ ПОЛНЫЙ РЕЛАКС И УДОВОЛЬСТВИЕ! 
+                                   самое замечательное настроение. 
                                 </li>
                             </ul>
                         </div>
@@ -446,13 +436,16 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    Мы подскажем где покушать, но оплатить прийдеться Вам <img src="/images/Emoji/1f609.png" alt="smile" height="20px"> 
+                                    Обед Аквазоо в одноразовой посуде:
+				    Первое, второе, мясное, хлеб, салат, чай/компот:
+				    60грн. Порция <img src="/images/Emoji/1f609.png" alt="smile" height="20px"> 
                                 </li>
 				<li class="list-group-item list-group-item-danger ">
-                                    Аренда Шезлонги - 50 грн. на день;
+                                    Бассейн на открытом воздухе, без подогрева:
+					Размер бассейна 8х4х1.3 = 40грн;
                                 </li>
 				<li class="list-group-item list-group-item-danger ">
-                                   Проезд до места выезда группы и обратно.
+					Катание на яхте <b>300 - 350 грн./час /1 чел.</b> <i>(цены на июнь 2021).</i>
                                 </li>     
                             </ul>
                         </div>
