--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -121,7 +121,7 @@
                         </h4>
                         
                         <p class="txt-alg-jf">
-			 Суперское место Днепра, самое яркое и необычное. 
+				Суперское место Днепра, <span id="ExcursionToZaporozhye">экскурсия из Запорожья</span>, самая яркая и необычная. 
 			 Домики на воде - Бали в миниатюре.
 			 Белые павлины, барашки, гусики и многие другие животные гуляющие по Яхтклубу. 
 			 Это удивление и восторг!  Трогательный зоопарк, где можно кормить и гладить зверушек. 
@@ -240,7 +240,7 @@
 					    
 					<h5>24 июля</h5>
                                         <p><strong>09:20 </strong>
-						выезд с центра Запорожья после минутки позитива. 
+						Выезд с центра Запорожья после минутки позитива. 
 						<img src="/images/Emoji/1f600.png" alt="" height="20px">
   						Фестивальная - Металлургов - Каховская заберем Вас в этих местах и в путь!
                                         </p>
@@ -488,8 +488,6 @@
                 Тексты подсказок:
                </p>
 			
-		<span class="badge rounded-pill bg-secondary"> <a onclick="selectText('Zaporozhye')"
-                                class="text-white" title="Запорожье" href="#Zaporozhye" rel="tag">Запорожье</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionToZaporozhye')"
                                 class="text-white" title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия
@@ -501,33 +499,25 @@
 			
                 <span class="badge rounded-pill bg-secondary"> <a
                                 onclick="selectText('cruise')" class="text-white"
-                                title="Mорское путешествие" href="#cruise" rel="tag">Mорское путешествие
+                                title="Mорское путешествие" href="#cruise" rel="tag">Яхтклуб
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('tourism')"
-                                class="text-white" title="Туризм" href="#tourism" rel="tag">Туризм
+                                class="text-white" title="Туризм" href="#tourism" rel="tag">AQUAZOO
 			</a></span>
 			
-                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('DzharylgachUkrainianMaldives')"
-                                class="text-white" title="Джарылгач - Украинские Мальдивы" href="#DzharylgachUkrainianMaldives" rel="tag">Джарылгач - Украинские Мальдивы
-			</a></span>	
-			
                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('OleshkovskyDesert')"
-                                class="text-white" title="Олешковская пустыня" href="#OleshkovskyDesert" rel="tag">Олешковская пустыня
+                                class="text-white" title="Олешковская пустыня" href="#OleshkovskyDesert" rel="tag">Домики на воде
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('goldenDunes')"
-                                class="text-white" title="Золотистые барханы" href="#goldenDunes" rel="tag">Золотистые барханы
+                                class="text-white" title="Золотистые барханы" href="#goldenDunes" rel="tag">Трогательный зоопарк
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('beautifulBeaches')"
-                                class="text-white" title="Красивейшие пляжи" href="#beautifulBeaches" rel="tag">Красивейшие пляжи
+                                class="text-white" title="Красивейшие пляжи" href="#beautifulBeaches" rel="tag">Мини-бассейн
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('mysteriousLighthouses')"
-                                class="text-white" title="Загадочные маяки" href="#mysteriousLighthouses" rel="tag">Загадочные маяки
-			</a></span>
-
                     </div>
                 </div>
             </div>
