--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -498,24 +498,24 @@
                                 Запорожье</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a
-                                onclick="selectText('cruise')" class="text-white"
-                                title="Mорское путешествие" href="#cruise" rel="tag">Яхтклуб
+                                onclick="selectText('YachtClub')" class="text-white"
+                                title="Яхтклуб" href="#YachtClub" rel="tag">Яхтклуб
 			</a></span>
 			
-                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('tourism')"
-                                class="text-white" title="Туризм" href="#tourism" rel="tag">AQUAZOO
+                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('AQUAZOO')"
+                                class="text-white" title="AQUAZOO" href="#AQUAZOO" rel="tag">AQUAZOO
 			</a></span>
 			
-               <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('OleshkovskyDesert')"
-                                class="text-white" title="Олешковская пустыня" href="#OleshkovskyDesert" rel="tag">Домики на воде
+               <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('HousesOnTheWater')"
+                                class="text-white" title="Домики на воде" href="#HousesOnTheWater" rel="tag">Домики на воде
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('goldenDunes')"
-                                class="text-white" title="Золотистые барханы" href="#goldenDunes" rel="tag">Трогательный зоопарк
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('TouchingZoo')"
+                                class="text-white" title="Трогательный зоопарк" href="#TouchingZoo" rel="tag">Трогательный зоопарк
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('beautifulBeaches')"
-                                class="text-white" title="Красивейшие пляжи" href="#beautifulBeaches" rel="tag">Мини-бассейн
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('Mini-pool')"
+                                class="text-white" title="Мини-бассейн" href="#Mini-pool" rel="tag">Мини-бассейн
 			</a></span>
 			
                     </div>
