--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -266,7 +266,7 @@
 					    поделиться впечатлениями с друзьями и близкими <i>(но еще лучше их взять с собой).</i> 
 					    Выкладываем сториз и посты в 
 						<!-- instagram -->
-						<a href="https://www.instagram.com/" target="_blank">
+						<a href="https://www.instagram.com/" title="Instagram" target="_blank">
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3364.7 3364.7" width="25" height="25">
 							    <defs>
 								<radialGradient id="0" cx="217.76" cy="3290.99" r="4271.92" gradientUnits="userSpaceOnUse">
@@ -284,12 +284,12 @@
 							</svg>
 						</a>
 						<!-- //instagram -->
-						<a href="https://www.instagram.com/" target="_blank">
+						<a href="https://www.instagram.com/" title="Instagram" target="_blank">
 							Instagram
 						</a>,  
 						
 						<!-- TiKTok -->
-						<a href="https://www.tiktok.com/" target="_blank">
+						<a href="https://www.tiktok.com/" title="TiK Tok" target="_blank">
 							<svg height="25" viewBox="0 0 250 250" width="25" xmlns="http://www.w3.org/2000/svg">
 							       <g clip-rule="evenodd" fill-rule="evenodd">
 								    <path d="M25 0h200c13.808 0 25 11.192 25 25v200c0 13.808-11.192 25-25 25H25c-13.808 0-25-11.192-25-25V25C0 11.192 11.192 0 25 0z" fill="#010101"></path>
@@ -305,11 +305,11 @@
 							 </svg>
 						</a>
 						<!-- //TiKTok -->
-						<a href="https://www.tiktok.com/" target="_blank" rel="noopener">
+						<a href="https://www.tiktok.com/" title="TiK Tok" target="_blank" rel="noopener">
 							Tik Tok 
 						</a>,	
 						<!-- Facebook -->
-						<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" rel="noopener">
+						<a  title="Facebook"  href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" rel="noopener">
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25" height="25"
 							     viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve">  <image id="image0" width="36" height="36" x="0" y="0"
 							    xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAMAAADW3miqAAAABGdBTUEAALGPC/xhBQAAACBjSFJN
@@ -325,7 +325,7 @@
 							</svg>
 						</a>
 						<!-- //Facebook -->
-						<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" rel="noopener">
+						<a title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" rel="noopener">
 						   Facebook
 						</a>, 
 					    обязательно отмечаем @dovgalyv.zp, Довгаль Юлия, @novipovorot,
