--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -112,7 +112,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span  class="dateOfTravel"> ? Августа  </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span  class="dateOfTravel"> 23 - 24 Августа  </span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
@@ -123,8 +123,8 @@
                         </h4>
                         
                         <p class="txt-alg-jf">
-                            Отдых на море, экскурсии в самых красивых уголках Южной Украины! 
-                        	Редкие животные Аскании ждут Вас в гости.
+                            Отдых на море, <span id="ExcursionToZaporozhye">экскурсии из Запорожье</span> в самых красивых уголках Южной Украины! 
+				<span id="RareAnimalsOfAskania">Редкие животные Аскании</span> ждут Вас в гости.
 				<img src="/images/Emoji/1f642.png" alt="" height="20px">
                         </p>
                         
@@ -457,8 +457,8 @@
                                 Запорожье</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a
-                                onclick="selectText('YachtClub')" class="text-white"
-                                title="Яхтклуб" href="#YachtClub" rel="tag">Яхтклуб
+                                onclick="selectText('RareAnimalsOfAskania')" class="text-white"
+                                title="Редкие животные Аскании" href="#RareAnimalsOfAskania" rel="tag">Редкие животные Аскании
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('AQUAZOO')"
