--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -372,40 +372,41 @@
                         <div class="alert alert-success">
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item list-group-item-success"> 
-                                  Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; <br>
-                                  <i>(от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь)</i>
+                                <li class="list-group-item list-group-item-success">
+                                    проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест
+                                    (от количества людей в группе, места в транспорте по датам оплат);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    входной билет и экскурсия в Центре Аквазоо; 
+                                    транспорт туристического класса с раскладными сиденьями, ТВ;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   сопровождение представителя нашей компании;
+                                    забираем с Металлургов-Фестивальная-Советская-Авто и Ж/Д вокзалы;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    магнит от Нового поворота;  
+                                    заберем Вас в Васильевке и по трассе с любого села по дороге на море;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   самое замечательное настроение. 
+                                    входной билет на территорию Аскания Новая самого удивительного парка-заповедника!
                                 </li>
-                            </ul>
-                        </div>
-			
-                        <div class="alert alert-danger">
-                            <h5 class="alert-heading">В стоимость не входит:</h5>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item list-group-item-danger ">
-                                    Обед Аквазоо в одноразовой посуде:
-				    Первое, второе, мясное, хлеб, салат, чай/компот:
-				    60грн. Порция <img src="/images/Emoji/1f609.png" alt="smile" height="20px"> 
+                                <li class="list-group-item list-group-item-success ">
+                                    офигенная экскурсия по Аскании - Нова!(Дендро и Зоопарк) 2.5-3 часа! ООООчень круто!
+                                    Все всегда в восторге!
                                 </li>
-				<li class="list-group-item list-group-item-danger ">
-                                    Бассейн на открытом воздухе, без подогрева:
-					Размер бассейна 8х4х1.3 = 40грн;
+                                <li class="list-group-item list-group-item-success ">
+                                    1 НОЧЬ НА МОРЕ в гостинице на Арабатской стреле(поселение 2х и 3х местные номера,
+                                    моря 5 минут, рядом магазины и кафе);
                                 </li>
-				<li class="list-group-item list-group-item-danger ">
-					Катание на яхте <b>300 - 350 грн./час /1 чел.</b> <i>(цены на июнь 2021).</i>
-                                </li>     
+                                <li class="list-group-item list-group-item-success ">
+                                    дегустация 2 видов вкуснейших вин на Розовом озере! Взрыв эмоций от красоты (группа
+                                    от 17 чел 3 вида вин);
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    сопровождение представителя нашей компании;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    сувенир-магнит от Нового поворота,
+                                    СУПЕР КРУТОЙ ОТДЫХ, ПОЛНЫЙ РЕЛАКС И УДОВОЛЬСТВИЕ!
+                                </li>
                             </ul>
                         </div>
                     <!-- owl-carousel -->
