--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -102,8 +102,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>5 Июня 2021
-                                        Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> Не Запланировано</span>
                                 </li>
                             </ul>
                         </div>
