--- a/booking.html
+++ b/booking.html
@@ -117,6 +117,7 @@
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
                                     <option>Тур</option>
+                                    <option>Яхтклуб И AQUAZOO</option>
                                     <option>Джарылгач - Украинские Мальдивы</option>
                                     <option>Святогорск И Соледар</option>
                                     <option>Львята И Лошадки</option>
