--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -133,7 +133,7 @@
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">×</button>
 
-                            <span class="fa fa-info-circle"></span><strong> Информируем</strong><br>
+                            <span class="fa fa-info-circle"></span><strong> Информируем</strong><br><br>
                             <span class="txt-alg-jf">
                                 При бронировании с <strong>29 июня по 10 июля: 1570 грн.</strong>, дети с 6 до 12 лет:
                                 1550 грн.! <hr>
