--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -124,8 +124,9 @@
                         
                         <p class="txt-alg-jf">
                             Отдых на море, <span id="ExcursionToZaporozhye">экскурсии из Запорожье</span> в самых красивых уголках Южной Украины! 
-				<span id="RareAnimalsOfAskania">Редкие животные Аскании</span> ждут Вас в гости.
-				<img src="/images/Emoji/1f642.png" alt="" height="20px">
+			    <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+			    <span id="RareAnimalsOfAskania">Редкие животные Аскании</span> ждут Вас в гости.
+			    Этот тур наполнит Ваши сердца Солнцем и Морем! <img src="/images/Emoji/1f60d.png" alt="smile" height="20px">
                         </p>
                         
                         <hr>
