--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -142,8 +142,8 @@
                                 1600 грн.! <hr>
                                 При бронировании с <strong>30 июля (если будут места): 1700грн.</strong>, дети с 6
                                 до 12 лет: 1650 грн.! <hr>
-                                Дети до 5 лет без отдельного места в транспорте и при поселении бесплатно! <br>
-                                Предоплата 50% от суммы, или ... 300грн и доплата по согласованию с менеджером!
+                               <i> Дети до 5 лет без отдельного места в транспорте и при поселении бесплатно! <br>
+                                Предоплата 50% от суммы, или ... 300грн и доплата по согласованию с менеджером!</i>
                             </span>
                         </div>
                         <!-- // Alert info -->
