--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -126,7 +126,7 @@
                             Отдых на море, <span id="ExcursionToZaporozhye">экскурсии из Запорожье</span> в самых красивых уголках Южной Украины! 
 			    <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
 			    <span id="RareAnimalsOfAskania">Редкие животные Аскании</span> ждут Вас в гости.
-			    Этот тур наполнит Ваши сердца Солнцем и Морем! <img src="/images/Emoji/1f60d.png" alt="smile" height="20px">
+				Этот тур наполнит Ваши сердца <span id="SunAndSea">Солнцем и Морем!</span> <img src="/images/Emoji/1f60d.png" alt="smile" height="20px">
                         </p>
                         
                         <hr>
@@ -448,7 +448,11 @@
                                 onclick="selectText('RareAnimalsOfAskania')" class="text-white"
                                 title="Редкие животные Аскании" href="#RareAnimalsOfAskania" rel="tag">Редкие животные Аскании
 			</a></span>
-			
+		
+		<span class="badge rounded-pill bg-secondary"> <a
+                                onclick="selectText('SunAndSea')" class="text-white"
+                                title="Солнце и Море" href="#SunAndSea" rel="tag">Солнце и Море
+			</a></span>
                 
 			
                     </div>
