--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -228,6 +228,7 @@
                                             <p>
                                                 <strong>08:00</strong>
                                                 Выезд из Центра Запорожья после минутки позитива.
+						    <img src="/images/Emoji/1f604.png" alt="smile" height="20px">
                                                 Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур.класса (раскладные сидения), TV
                                                 (ЛЕГКАЯ ДОРОГА).
                                                 Заберем Вас из Металлургов-Фестивальная-Авто и Ж/Д вокзалы
@@ -297,6 +298,7 @@
                                                 ОТДЫХАЕМ И ВЫКЛАДЫВАЕМ ФОТО.
                                                 Не забывайте отмечать наши странички, +10000 в карму и искренняя наша
                                                 благодарочка.
+						    <img src="/images/Emoji/1f607.png" alt="smile" height="20px">
                                             </p>
                                         <hr>
                                         <p>
