--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -229,7 +229,9 @@
                                                 <strong>08:00</strong>
                                                 Выезд из Центра Запорожья после минутки позитива.
 						    <img src="/images/Emoji/1f604.png" alt="smile" height="20px">
-                                                Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур.класса (раскладные сидения), TV
+                                                Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур.класса (раскладные сидения), 
+						    <img src="images/Emoji/tv.png" alt="TV" height="20px">
+						    TV
                                                 (ЛЕГКАЯ ДОРОГА).
                                                 Заберем Вас из Металлургов-Фестивальная-Авто и Ж/Д вокзалы
                                                 (уточняйте при бронировании, можем подобрать по пути в Васильевке
