--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -276,7 +276,7 @@
 						    	Instagram. 
 						    </a>
 						    Озеро на закате.
-                                                Набираем сольки и целебной грязи с собой и назад в гостиницу продолжать отдых на
+                                                Набираем сольки и <span id="HealingMud">целебной грязи</span> с собой и назад в гостиницу продолжать отдых на
                                                 море!
                                             </p>
                                             <hr>
@@ -464,6 +464,10 @@
                                 title="Солнце и Море" href="#SunAndSea" rel="tag">Солнце и Море
 			</a></span>
                 
+		<span class="badge rounded-pill bg-secondary"> <a
+                                onclick="selectText('HealingMud')" class="text-white"
+                                title="Целебная грязь" href="#HealingMud" rel="tag">Целебная грязь
+			</a></span>
 			
                     </div>
                 </div>
