--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -176,19 +176,21 @@
                         </div>
                         
                         <h4 class="mb-3">
-			     Одолеть Говерлу. Искупаться в горном озере. Наесться до отвала ягод и грибов. Отдых в горах!
+			     Одолеть Говерлу. Искупаться в горном озере. Наесться до отвала ягод и грибов.
+				<span id="goldenDunes">Отдых в горах!</span>
                         </h4>
                         <p class="mb-3 bg-success text-white text-center">
 			    Заезды с июля по сентябрь 2021 (каждую неделю) <img src="/images/Emoji/1f600.png" alt="" height="20px">
 			</p>
                         <p class="txt-alg-jf">
-                           Красивейшие пейзажи Карпатских гор. 
+                           Красивейшие <span id="">пейзажи Карпатских гор.</span> <span id="WesternUkraineFromZaporozhye"> Западная Украина из Запорожья </span>
 		           Cвежее дыхание вечнозеленого леса. 
 			   Чистота озер, самобытная культура края.
 			</p>
 			<p class="txt-alg-jf">
-			  Новые друзья, незабываемые впечатления, Экскурсии (Буковель, Яремче, Солотвино) 
-			  Восхождение на Говерлу, сбор грибов и ягод… Возможность отдохнуть от жары и 
+			  Новые друзья, незабываемые впечатления. <span id="ExcursionToZaporozhye"> Экскурсии из Запорожье </span> в
+				<span id="BukovelYaremcheSolotvino">Буковель, Яремче, Солотвино.</span> 
+				Восхождение на Говерлу, сбор грибов и ягод… Возможность в <span id="tourism">туризме</span> отдохнуть от жары и 
 			  суеты шумного города и зарядиться бодростью и здоровьем на весь год !
                         </p>
                          
@@ -299,7 +301,7 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-				Полных дней  в отеле на Драгобрате: 6 ночей / 6 дней, выезд из Запорожья и других городов поездом каждую пятницу
+				Полных дней  в отеле на Драгобрате: 6 ночей / 6 дней, выезд из <span id="Zaporozhye">Запорожья</span> и других городов поездом каждую пятницу
 				— возвращение домой по воскресеньям <img src="/images/Emoji/1f642.png" alt="" height="20px"><hr>
 			    </span>
 		            <span class="text-left"> 
@@ -453,7 +455,7 @@
 					<h5>ЧЕТВЕРГ</h5>
                                         <p><!--<strong>00:00 </strong>-->
 						Поездка «Пикник на озере Геришаска» —
-						Живописное горное озеро ледникового происхождения. 
+						Живописное <span id="MountainLake">горное озеро</span> ледникового происхождения. 
 						Красивейшие пейзажи, открывающиеся из озера, и чистый 
 						горный воздух не оставят равнодушными ни одного человека,
 						кто посетит это место. Можно прогуляться по окрестностям озера,
@@ -735,12 +737,12 @@
                                 class="text-white" title="Горное озеро" href="#MountainLake" rel="tag">Горное озеро
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('goldenDunes')"
-                                class="text-white" title="Отдых в горах" href="#goldenDunes" rel="tag">Отдых в горах
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('HolidaysInTheMountains')"
+                                class="text-white" title="Отдых в горах" href="#HolidaysInTheMountains" rel="tag">Отдых в горах
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('HolidaysInTheMountains')"
-                                class="text-white" title="Красивейшие пляжи" href="#HolidaysInTheMountains" rel="tag">Пейзажи Карпатских гор
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('LandscapesOfTheCarpathianMountains')"
+                                class="text-white" title="Пейзажи Карпатских гор" href="#LandscapesOfTheCarpathianMountains" rel="tag">Пейзажи Карпатских гор
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('BreathOfTheEvergreenForest')"
