--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -183,8 +183,8 @@
 			    Заезды с июля по сентябрь 2021 (каждую неделю) <img src="/images/Emoji/1f600.png" alt="" height="20px">
 			</p>
                         <p class="txt-alg-jf">
-                           Красивейшие <span id="">пейзажи Карпатских гор.</span> <span id="WesternUkraineFromZaporozhye"> Западная Украина из Запорожья </span>
-		           Cвежее дыхание вечнозеленого леса. 
+                           Красивейшие <span id="LandscapesOfTheCarpathianMountains">пейзажи Карпатских гор.</span> <span id="WesternUkraineFromZaporozhye"> Западная Украина из Запорожья </span>
+		           Cвежее <span id="BreathOfTheEvergreenForest"> дыхание вечнозеленого леса. </span>
 			   Чистота озер, самобытная культура края.
 			</p>
 			<p class="txt-alg-jf">
